--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.71.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tslint": "^5.12.1"
   },
   "private": true
 }
